--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FO Transport 13</title>
+    <title>
+      FO Transport 13 - Votre syndicat Force Ouvrière dans le domaine du
+      transport à Marseille
+    </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link
       rel="stylesheet"
@@ -14,9 +17,72 @@
     />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <div class="barre-sup">
+        <div class="menu-barre-sup">
+          <a href="#">À propos</a>
+          <a href="#">Nous contacter</a>
+        </div>
+        <div>
+          <button>
+            <a href="#"
+              ><i class="fa-solid fa-user-plus"></i>Je souhaite adhérer</a
+            >
+          </button>
+        </div>
+      </div>
+      <div class="barre-nav">
+        <div class="logo">
+          <img
+            src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
+            alt="Logo Force Ouvrière Transport 13"
+          />
+          <h1>FO Transport 13</h1>
+        </div>
+        <div class="navigation">
+          <div class="menuIcons">
+            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-xmark"></i>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li>
+                  <a href="./index.html"
+                    ><i class="fa-solid fa-house-chimney"></i
+                  ></a>
+                </li>
+                <li><a href="#">Vos droits</a></li>
+                <li><a href="#">Nous connaître</a></li>
+                <li><a href="#">Outils</a></li>
+                <li><a href="#">Médias</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <h1>Titre 1</h1>
+    </main>
+    <footer>
+      <div class="footer-sup">
+        <ul>
+          <li><a href="#">Plan du site</a></li>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="#">Confidentialité</a></li>
+          <li><a href="#">Cookies</a></li>
+          <li><a href="#">CGU</a></li>
+          <li><a href="#">Nous contacter</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <p>
+          ©2024 | <a href="./index.html">FO Transport 13</a> | Made with ♥ by
+          <a href="https://webilys.fr">Webilys</a> | Tous droits réservés.
+        </p>
+      </div>
+    </footer>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
