--- a/index.html
+++ b/index.html
@@ -16,70 +16,30 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body id="accueil">
     <header>
-      <div class="barre-sup">
-        <div class="menu-barre-sup">
-          <a href="#">À propos</a>
-          <a href="#">Nous contacter</a>
-        </div>
-        <div>
-          <button>
-            <a href="#"
-              ><i class="fa-solid fa-user-plus"></i>Je souhaite adhérer</a
-            >
-          </button>
-        </div>
-      </div>
-      <div class="barre-nav">
-        <div class="logo">
-          <img
-            src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
-            alt="Logo Force Ouvrière Transport 13"
-          />
-          <h1>FO Transport 13</h1>
-        </div>
-        <div class="navigation">
-          <div class="menuIcons">
-            <i class="fa-solid fa-bars"></i>
-            <i class="fa-solid fa-xmark"></i>
-          </div>
-          <div>
-            <nav>
-              <ul>
-                <li>
-                  <a href="./index.html"
-                    ><i class="fa-solid fa-house-chimney"></i
-                  ></a>
-                </li>
-                <li><a href="#">Vos droits</a></li>
-                <li><a href="#">Nous connaître</a></li>
-                <li><a href="#">Outils</a></li>
-                <li><a href="#">Médias</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </div>
+      <img
+        src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
+        alt="Logo syndicat départemental des transports et de la logistique"
+      />
     </header>
     <main>
-      <h1>Titre 1</h1>
+      <h1>
+        Bienvenue sur le site du syndicat départemental des transports et de la
+        logistique
+      </h1>
+      <button class="buttonIconRight">
+        <a href="./home.html"
+          >Entrer sur le site <i class="fa-solid fa-circle-arrow-right"></i
+        ></a>
+      </button>
     </main>
     <footer>
-      <div class="footer-sup">
-        <ul>
-          <li><a href="#">Plan du site</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Confidentialité</a></li>
-          <li><a href="#">Cookies</a></li>
-          <li><a href="#">CGU</a></li>
-          <li><a href="#">Nous contacter</a></li>
-        </ul>
-      </div>
       <div class="footer-copyright">
         <p>
           ©2024 | <a href="./index.html">FO Transport 13</a> | Made with ♥ by
-          <a href="https://webilys.fr">Webilys</a> | Tous droits réservés.
+          <a href="https://webilys.fr" target="_blank">Webilys</a> | Tous droits
+          réservés.
         </p>
       </div>
     </footer>
