--- a/home.html
+++ b/home.html
@@ -36,8 +36,8 @@
                   ><i class="fa-solid fa-house-chimney"></i
                 ></a>
               </li>
-              <li><a href="#">Vos avantages</a></li>
               <li><a href="#">Nous connaître</a></li>
+              <li><a href="#">Vos droits</a></li>
               <li><a href="#">Outils</a></li>
               <li><a href="#">Médias</a></li>
               <li><a href="#">Nous contacter</a></li>
@@ -46,14 +46,76 @@
         </div>
         <div>
           <button class="buttonIcon">
-            <a href="#"
+            <a href="./pre-adhesion.html"
               ><i class="fa-solid fa-user-plus"></i>Je souhaite adhérer</a
+            >
+          </button>
+          <button class="buttonIcon">
+            <a
+              href="          https://syndicat-departemental-force-ouvriere-transports--6618ac08c732b.assoconnect.com/contacts/login
+              "
+              ><i class="fa-solid fa-user"></i>Se connecter</a
             >
           </button>
         </div>
       </div>
     </header>
     <main>
+      <section class="hero">
+        <div class="hero-container">
+          <div></div>
+          <div class="lettre-secretaire">
+            <h2>LA LETTRE DU SECRETAIRE GENERAL</h2>
+            <p>
+              <!-- la lettre mélange vouvoiement et tutoiement -->
+
+              C’est avec plaisir que je t’accueille sur notre site internet.
+              <br /><br />
+
+              Être Adhérent au Syndicat Départemental FORCE OUVRIERE des
+              Transports et de la Logistique des Bouches du Rhône c’est dans le
+              respect de la laïcité :
+              <br /><br />
+            </p>
+            <ul>
+              <li>
+                De relever le niveau moral et économique des travailleurs.
+              </li>
+              <li>
+                De conclure des conventions collectives ainsi que des accords
+                portant sur les conditions de travail, de rémunération, de
+                protection et de garanties sociales et économiques de ses
+                membres et, d’une façon générale, des salariés occupés dans la
+                profession de son ressort.
+              </li>
+              <li>
+                De resserrer les liens de solidarité et d’unir en un seul bloc
+                tous les travailleurs pour développer entre eux l’idée de la
+                démocratie économique tant sur le plan de l’entreprise, sur le
+                plan régional et national, et lutter contre toutes formes
+                d’exploitation capitaliste privée ou d’Etat.
+              </li>
+            </ul>
+            <p>
+              <br /><br />
+              Vous pourrez trouver sur ce site des informations générales, des
+              informations plus personnelles et vous pourrez à tout moment nous
+              contacter via la zone de dialogue.
+              <br /><br />
+              J’espère vous rencontrer très prochainement.
+              <br /><br />
+              Salutations Syndicales
+              <br /><br />
+              <span class="signature">
+                <strong> Laurent CASANOVA </strong>
+                <br />
+                Secrétaire Général - Diplômé en droit social de Sciences
+                Politiques
+              </span>
+            </p>
+          </div>
+        </div>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
