--- a/home.html
+++ b/home.html
@@ -36,17 +36,17 @@
                   ><i class="fa-solid fa-house-chimney"></i
                 ></a>
               </li>
-              <li><a href="#">Nous connaître</a></li>
-              <li><a href="#">Vos droits</a></li>
-              <li><a href="#">Outils</a></li>
-              <li><a href="#">Médias</a></li>
-              <li><a href="#">Nous contacter</a></li>
+              <li><a href="./nous-connaitre.html">Nous connaître</a></li>
+              <li><a href="./vos-droits.html">Vos droits</a></li>
+              <li><a href="./outils.html">Outils</a></li>
+              <li><a href="./medias.html">Médias</a></li>
+              <li><a href="./nous-contacter.html">Nous contacter</a></li>
             </ul>
           </nav>
         </div>
         <div>
           <button class="buttonIcon">
-            <a href="./pre-adhesion.html"
+            <a href="./je-souhaite-adherer.html"
               ><i class="fa-solid fa-user-plus"></i>Je souhaite adhérer</a
             >
           </button>
@@ -63,7 +63,32 @@
     <main>
       <section class="hero">
         <div class="hero-container">
-          <div></div>
+          <div class="items-container">
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je souhaite adhérer</h2>
+              </div>
+            </a>
+            <a href="./vos-droits.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Les avantages de mon adhésion</h2>
+              </div>
+            </a>
+            <a href="#">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Mes documents importants</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Mes informations syndicales</h2>
+              </div>
+            </a>
+          </div>
           <div class="lettre-secretaire">
             <h2>LA LETTRE DU SECRETAIRE GENERAL</h2>
             <p>
@@ -114,6 +139,32 @@
               </span>
             </p>
           </div>
+          <div class="items-container">
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis élu(e) au CSE</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis mandaté par mon syndicat</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis mandaté par mon Union Départementale</h2>
+              </div>
+            </a>
+            <a href="./nous-contacter.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>J'ai une question</h2>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
       <section class="cta">
@@ -127,7 +178,7 @@
             engagée !
           </p>
           <button>
-            <a href="#">Je souhaite adhérer</a>
+            <a href="./je-souhaite-adherer.html">Je souhaite adhérer</a>
           </button>
         </div>
       </section>
@@ -135,12 +186,11 @@
     <footer>
       <div class="footer-sup">
         <ul>
-          <li><a href="#">Plan du site</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Confidentialité</a></li>
-          <li><a href="#">Cookies</a></li>
-          <li><a href="#">CGU</a></li>
-          <li><a href="#">Nous contacter</a></li>
+          <li><a href="./plan-du-site.html">Plan du site</a></li>
+          <li><a href="./mentions-legales.html">Mentions légales</a></li>
+          <li><a href="./confidentialite.html">Confidentialité</a></li>
+          <li><a href="./cgu.html">CGU</a></li>
+          <li><a href="./nous-contacter.html">Nous contacter</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
