--- a/index.html
+++ b/index.html
@@ -16,28 +16,200 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="accueil">
+  <body>
     <header>
-      <img
-        src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
-        alt="Logo syndicat départemental des transports et de la logistique"
-      />
+      <div class="barre-sup">
+        <div class="menu-barre-sup">
+          <img
+            src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
+            alt="Logo Force Ouvrière Transport 13"
+          />
+
+          <div class="menuIcons">
+            <i class="fa-solid fa-bars" id="openIcon"></i>
+            <i class="fa-solid fa-xmark" id="closeIcon"></i>
+          </div>
+          <nav>
+            <ul>
+              <li>
+                <a href="./home.html"
+                  ><i class="fa-solid fa-house-chimney"></i
+                ></a>
+              </li>
+              <li><a href="./nous-connaitre.html">Nous connaître</a></li>
+              <li><a href="./vos-droits.html">Vos droits</a></li>
+              <li><a href="./outils.html">Outils</a></li>
+              <li><a href="./medias.html">Médias</a></li>
+              <li><a href="./nous-contacter.html">Nous contacter</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <button class="buttonIcon">
+            <a href="./je-souhaite-adherer.html"
+              ><i class="fa-solid fa-user-plus"></i>Je souhaite adhérer</a
+            >
+          </button>
+          <button class="buttonIcon">
+            <a
+              href="          https://syndicat-departemental-force-ouvriere-transports--6618ac08c732b.assoconnect.com/contacts/login
+              "
+              ><i class="fa-solid fa-user"></i>Se connecter</a
+            >
+          </button>
+        </div>
+      </div>
     </header>
     <main>
-      <h1>
-        Bienvenue sur le site du syndicat départemental des transports et de la
-        logistique
-      </h1>
-      <button class="buttonIconRight">
-        <a href="./home.html"
-          >Entrer sur le site <i class="fa-solid fa-circle-arrow-right"></i
-        ></a>
-      </button>
+      <section class="hero">
+        <div class="heroOverlay">
+          <h2>
+            Bienvenue sur le site du syndicat départemental des transports et de
+            la logistique
+          </h2>
+          <button class="buttonIconRight">
+            <a href="./home.html"
+              >Entrer sur le site <i class="fa-solid fa-circle-arrow-right"></i
+            ></a>
+          </button>
+        </div>
+      </section>
+      <section class="lettre">
+        <div class="lettre-container">
+          <div class="items-container">
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je souhaite adhérer</h2>
+              </div>
+            </a>
+            <a href="./vos-droits.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Les avantages de mon adhésion</h2>
+              </div>
+            </a>
+            <a href="#">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Mes documents importants</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Mes informations syndicales</h2>
+              </div>
+            </a>
+          </div>
+          <div class="lettre-secretaire">
+            <h2>LA LETTRE DU SECRETAIRE GENERAL</h2>
+            <p>
+              <!-- la lettre mélange vouvoiement et tutoiement -->
+
+              C’est avec plaisir que je t’accueille sur notre site internet.
+              <br /><br />
+
+              Être Adhérent au Syndicat Départemental FORCE OUVRIERE des
+              Transports et de la Logistique des Bouches du Rhône c’est dans le
+              respect de la laïcité :
+              <br /><br />
+            </p>
+            <ul>
+              <li>
+                De relever le niveau moral et économique des travailleurs.
+              </li>
+              <li>
+                De conclure des conventions collectives ainsi que des accords
+                portant sur les conditions de travail, de rémunération, de
+                protection et de garanties sociales et économiques de ses
+                membres et, d’une façon générale, des salariés occupés dans la
+                profession de son ressort.
+              </li>
+              <li>
+                De resserrer les liens de solidarité et d’unir en un seul bloc
+                tous les travailleurs pour développer entre eux l’idée de la
+                démocratie économique tant sur le plan de l’entreprise, sur le
+                plan régional et national, et lutter contre toutes formes
+                d’exploitation capitaliste privée ou d’Etat.
+              </li>
+            </ul>
+            <p>
+              <br /><br />
+              Vous pourrez trouver sur ce site des informations générales, des
+              informations plus personnelles et vous pourrez à tout moment nous
+              contacter via la zone de dialogue.
+              <br /><br />
+              J’espère vous rencontrer très prochainement.
+              <br /><br />
+              Salutations Syndicales
+              <br /><br />
+              <span class="signature">
+                <strong> Laurent CASANOVA </strong>
+                <br />
+                Secrétaire Général - Diplômé en droit social de Sciences
+                Politiques
+              </span>
+            </p>
+          </div>
+          <div class="items-container">
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis élu(e) au CSE</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis mandaté par mon syndicat</h2>
+              </div>
+            </a>
+            <a href="./je-souhaite-adherer.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>Je suis mandaté par mon Union Départementale</h2>
+              </div>
+            </a>
+            <a href="./nous-contacter.html">
+              <div class="item">
+                <i class="fa-solid fa-user-plus"></i>
+                <h2>J'ai une question</h2>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="cta">
+        <div class="overlay">
+          <h2>
+            Prêt à rejoindre notre syndicat et à défendre vos droits en tant que
+            travailleur du secteur du transport et de la logistique ?
+          </h2>
+          <p>
+            Adhérez dès aujourd’hui et devenez membre de notre communauté
+            engagée !
+          </p>
+          <button>
+            <a href="./je-souhaite-adherer.html">Je souhaite adhérer</a>
+          </button>
+        </div>
+      </section>
     </main>
     <footer>
+      <div class="footer-sup">
+        <ul>
+          <li><a href="./plan-du-site.html">Plan du site</a></li>
+          <li><a href="./mentions-legales.html">Mentions légales</a></li>
+          <li><a href="./confidentialite.html">Confidentialité</a></li>
+          <li><a href="./cgu.html">CGU</a></li>
+          <li><a href="./nous-contacter.html">Nous contacter</a></li>
+        </ul>
+      </div>
       <div class="footer-copyright">
         <p>
-          ©2024 | <a href="./index.html">FO Transport 13</a> | Made with ♥ by
+          ©2024 | <a href="./index.html">FO Transport 13</a> | Made with
+          <span class="heart">♥</span> by
           <a href="https://webilys.fr" target="_blank">Webilys</a> | Tous droits
           réservés.
         </p>
