--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="barre-sup">
         <div class="menu-barre-sup">
           <img
-            src="./assets/img/Logo_FO_Transport_13-316x198-1.png"
+            src="./assets/img/logo-fo-transport-13.png"
             alt="Logo Force Ouvrière Transport 13"
           />
 
@@ -130,19 +130,85 @@
       </section>
       <section id="categories">
         <a href="./nous-connaitre.html">
-          <div class="item">
+          <div
+            class="item"
+            style="
+              background: url(./assets/img/nous-connaitre.png) center/cover;
+            "
+          >
             <h2>Nous connaître</h2>
           </div>
         </a>
         <a href="./vos-droits.html">
-          <div class="item"><h2>Vos droits</h2></div>
+          <div
+            class="item"
+            style="background: url(./assets/img/vos-droits.png) center/cover"
+          >
+            <h2>Vos droits</h2>
+          </div>
         </a>
         <a href="./outils.html">
-          <div class="item"><h2>Outils</h2></div>
+          <div
+            class="item"
+            style="background: url(./assets/img/outils.png) center/cover"
+          >
+            <h2>Outils</h2>
+          </div>
         </a>
         <a href="./medias.html">
-          <div class="item"><h2>Médias</h2></div>
+          <div
+            class="item"
+            style="background: url(./assets/img/medias.png) center/cover"
+          >
+            <h2>Médias</h2>
+          </div>
         </a>
+      </section>
+
+      <section class="lettre">
+        <div class="img-lettre">
+          <img src="./assets/img/lettre.png" alt="" />
+        </div>
+        <div class="texte-lettre">
+          <h2>La lettre du secrétaire</h2>
+          <p>
+            C’est avec plaisir que je t’accueille sur notre site internet.
+            <br /><br />
+            Être Adhérent au Syndicat Départemental FORCE OUVRIERE des
+            Transports et de la Logistique des Bouches du Rhône c’est dans le
+            respect de la laïcité :
+            <br /><br />
+            • De relever le niveau moral et économique des travailleurs.
+            <br /><br />
+            • De conclure des conventions collectives ainsi que des accords
+            portant sur les conditions de travail, de rémunération, de
+            protection et de garanties sociales et économiques de ses membres
+            et, d’une façon générale, des salariés occupés dans la profession de
+            son ressort.
+            <br /><br />
+            • De resserrer les liens de solidarité et d’unir en un seul bloc
+            tous les travailleurs pour développer entre eux l’idée de la
+            démocratie économique tant sur le plan de l’entreprise, sur le plan
+            régional et national, et lutter contre toutes formes d’exploitation
+            capitaliste privée ou d’Etat.
+            <br /><br />
+            Vous pourrez trouver sur ce site des informations générales, des
+            informations plus personnelles et vous pourrez à tout moment nous
+            contacter via la zone de dialogue.
+            <br /><br />
+            J’espère vous rencontrer très prochainement.
+            <br /><br />
+            Salutations Syndicales
+            <br /><br />
+            <span class="signature">
+              Laurent CASANOVA - Secrétaire Général
+              <br />
+              <span class="small"
+                >Diplômé en droit social de Sciences Politiques</span
+              >
+            </span>
+          </p>
+        </div>
       </section>
       <section class="cta">
         <div class="overlay">
