--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <nav>
             <ul>
               <li>
-                <a href="./home.html"
+                <a href="./index.html"
                   ><i class="fa-solid fa-house-chimney"></i
                 ></a>
               </li>
@@ -46,12 +46,36 @@
                   onmouseleave="closeSousNav1()"
                 >
                   <ul>
-                    <li><a href="#">Qui sommes-nous ?</a></li>
-                    <li><a href="#">Nos services aux adhérents</a></li>
-                    <li><a href="#">Nos revendications</a></li>
-                    <li><a href="#">Nos valeurs</a></li>
-                    <li><a href="#">Notre fonctionnement</a></li>
-                    <li><a href="#">Notre réseau</a></li>
+                    <li>
+                      <a href="./nous-connaitre.html#qui-sommes-nous"
+                        >Qui sommes-nous ?</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./nous-connaitre.html#nos-services-aux-adherents"
+                        >Nos services aux adhérents</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./nous-connaitre.html#nos-revendications"
+                        >Nos revendications</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./nous-connaitre.html#nos-valeurs"
+                        >Nos valeurs</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./nous-connaitre.html#notre-fonctionnement"
+                        >Notre fonctionnement</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./nous-connaitre.html#notre-reseau"
+                        >Notre réseau</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </li>
@@ -65,11 +89,24 @@
                   onmouseleave="closeSousNav2()"
                 >
                   <ul>
-                    <li><a href="#">Les avantages de mon adhésion</a></li>
-                    <li><a href="#">Je suis élu(e) au CSE</a></li>
-                    <li><a href="#">Je suis mandaté(e) par mon syndicat</a></li>
                     <li>
-                      <a href="#"
+                      <a href="./les-avantages-de-mon-adhesion.html"
+                        >Les avantages de mon adhésion</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./je-suis-elu-e-au-cse.html"
+                        >Je suis élu(e) au CSE</a
+                      >
+                    </li>
+                    <li>
+                      <a href="./je-suis-mandate-e-par-mon-syndicat.html"
+                        >Je suis mandaté(e) par mon syndicat</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="./je-suis-mandate-e-par-mon-union-departementale.html"
                         >Je suis mandaté(e) par mon Union Départementale</a
                       >
                     </li>
@@ -86,11 +123,8 @@
                   onmouseleave="closeSousNav3()"
                 >
                   <ul>
-                    <li><a href="#">Tous les outils</a></li>
-                    <li><a href="#">Les tracts</a></li>
-                    <li><a href="#">Les affiches</a></li>
-                    <li><a href="#">Les essentiels</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="./outils.html">Tous les outils</a></li>
+                    <li><a href="./faq.html">FAQ</a></li>
                   </ul>
                 </div>
               </li>
@@ -245,6 +279,11 @@
         </p>
       </div>
     </footer>
+    <a href="tel:0491 000000">
+      <div class="bouton-appel">
+        <i class="fa-solid fa-phone"></i>
+      </div>
+    </a>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
