--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -188,6 +188,7 @@
           <p>Nous offrons à nos adhérents un large éventail de services :</p>
           <div class="services-container">
             <div class="service">
+              <i class="fa-solid fa-scale-balanced"></i>
               <h3>Accompagnement juridique</h3>
               <p>
                 Assistance dans les litiges professionnels et conseils
@@ -195,6 +196,7 @@
               </p>
             </div>
             <div class="service">
+              <i class="fa-solid fa-chalkboard-user"></i>
               <h3>Formation et information</h3>
               <p>
                 Sessions de sensibilisation sur les droits des travailleurs,
@@ -202,6 +204,7 @@
               </p>
             </div>
             <div class="service">
+              <i class="fa-solid fa-people-group"></i>
               <h3>Représentation</h3>
               <p>
                 Intervention lors des négociations collectives et actions
@@ -209,6 +212,7 @@
               </p>
             </div>
             <div class="service">
+              <i class="fa-regular fa-thumbs-up"></i>
               <h3>Avantages exclusifs</h3>
               <p>
                 Accès à un réseau d’experts et à des outils pour sécuriser votre
@@ -220,7 +224,7 @@
       </section>
 
       <section id="nos-revendications">
-        <div>
+        <div class="revendications-div">
           <h2>Nos revendications</h2>
           <p>Nous portons haut et fort les revendications suivantes :</p>
 
@@ -257,38 +261,64 @@
       <section id="nos-valeurs">
         <div>
           <h2>Nos valeurs</h2>
-          <p>
-            Nous défendons les principes fondamentaux du syndicalisme :
-            <br /><br />
-            Solidarité : unir tous les acteurs du transport pour une force
-            collective.
-            <br /><br />
-            Justice sociale : garantir l'équité dans le traitement des
-            travailleurs.
-            <br /><br />
-            Transparence : agir avec clarté et honnêteté dans toutes nos
-            actions.
-            <br /><br />
-            Engagement : défendre chaque adhérent avec détermination.
-          </p>
+          <p>Nous défendons les principes fondamentaux du syndicalisme :</p>
+          <div class="valeurs-container">
+            <div class="valeur">
+              <i class="fa-solid fa-scale-balanced"></i>
+              <h3>Solidarité</h3>
+              <p>
+                Unir tous les acteurs du transport pour une force collective.
+              </p>
+            </div>
+            <div class="valeur">
+              <i class="fa-solid fa-chalkboard-user"></i>
+              <h3>Justice sociale</h3>
+              <p>Garantir l'équité dans le traitement des travailleurs.</p>
+            </div>
+            <div class="valeur">
+              <i class="fa-solid fa-people-group"></i>
+              <h3>Transparence</h3>
+              <p>Agir avec clarté et honnêteté dans toutes nos actions.</p>
+            </div>
+            <div class="valeur">
+              <i class="fa-regular fa-thumbs-up"></i>
+              <h3>Engagement</h3>
+              <p>Défendre chaque adhérent avec détermination.</p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="notre-fonctionnement">
-        <div>
+        <div class="fonctionnement-div">
           <h2>Notre fonctionnement</h2>
-          <p>
-            Le syndicat repose sur une organisation démocratique :
-            <br /><br />
-            Un bureau départemental composé de représentants élus par les
-            adhérents.
-            <br /><br />
-            Des commissions thématiques pour traiter des problématiques
-            spécifiques.
-            <br /><br />
-            Des assemblées générales régulières pour établir nos priorités et
-            orientations. Grâce à cette structure, nous restons à l’écoute des
-            besoins de nos adhérents tout en garantissant une action efficace.
+          <p>Le syndicat repose sur une organisation démocratique :</p>
+          <div class="fonctionnement-container">
+            <div class="fonctionnement-item">
+              <i class="fa-solid fa-1"></i>
+              <p>
+                Un bureau départemental composé de représentants élus par les
+                adhérents.
+              </p>
+            </div>
+            <div class="fonctionnement-item">
+              <i class="fa-solid fa-2"></i>
+              <p>
+                Des commissions thématiques pour traiter des problématiques
+                spécifiques.
+              </p>
+            </div>
+            <div class="fonctionnement-item">
+              <i class="fa-solid fa-3"></i>
+              <p>
+                Des assemblées générales régulières pour établir nos priorités
+                et orientations.
+              </p>
+            </div>
+          </div>
+          <p style="padding-top: 30px">
+            Grâce à cette structure, nous restons à l’écoute des besoins de nos
+            adhérents tout en garantissant une action efficace.
           </p>
         </div>
       </section>
