--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </p>
       </div>
     </footer>
-    <a href="tel:0491 000000">
+    <a href="tel:0491340034">
       <div class="bouton-appel">
         <i class="fa-solid fa-phone"></i>
       </div>
