--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -161,8 +161,8 @@
           <p>
             Découvrez l’histoire et la mission du Syndicat Départemental Force
             Ouvrière des Transports et de la Logistique des Bouches-du-Rhône,
-            engagé depuis [année de fondation] pour défendre les intérêts des
-            travailleurs du secteur du transport et de la logistique.
+            engagé pour défendre les intérêts des travailleurs du secteur du
+            transport et de la logistique.
           </p>
         </div>
       </section>
@@ -372,7 +372,7 @@
         </p>
       </div>
     </footer>
-    <a href="tel:0491 000000">
+    <a href="tel:0491340034">
       <div class="bouton-appel">
         <i class="fa-solid fa-phone"></i>
       </div>
