--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -151,12 +151,10 @@
     <main>
       <section id="title-page">
         <div class="title-container">
-          <div>
-            <h1>Nous connaître</h1>
-          </div>
+          <h1>Nous connaître</h1>
         </div>
       </section>
-      <section class="intro">
+      <section class="intro section">
         <div>
           <p>
             Découvrez l’histoire et la mission du Syndicat Départemental Force
@@ -166,7 +164,7 @@
           </p>
         </div>
       </section>
-      <section id="qui-sommes-nous">
+      <section id="qui-sommes-nous" class="section">
         <div>
           <h2>Qui sommes-nous ?</h2>
           <p>
@@ -182,7 +180,7 @@
         </div>
       </section>
 
-      <section id="nos-services-aux-adherents">
+      <section id="nos-services-aux-adherents" class="section">
         <div>
           <h2>Nos services aux adhérents</h2>
           <p>Nous offrons à nos adhérents un large éventail de services :</p>
@@ -223,7 +221,7 @@
         </div>
       </section>
 
-      <section id="nos-revendications">
+      <section id="nos-revendications" class="section">
         <div class="revendications-div">
           <h2>Nos revendications</h2>
           <p>Nous portons haut et fort les revendications suivantes :</p>
@@ -258,7 +256,7 @@
         </div>
       </section>
 
-      <section id="nos-valeurs">
+      <section id="nos-valeurs" class="section">
         <div>
           <h2>Nos valeurs</h2>
           <p>Nous défendons les principes fondamentaux du syndicalisme :</p>
@@ -289,7 +287,7 @@
         </div>
       </section>
 
-      <section id="notre-fonctionnement">
+      <section id="notre-fonctionnement" class="section">
         <div class="fonctionnement-div">
           <h2>Notre fonctionnement</h2>
           <p>Le syndicat repose sur une organisation démocratique :</p>
