--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -8,6 +8,7 @@
       domaine du transport à Marseille
     </title>
     <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
