--- a/nous-contacter.html
+++ b/nous-contacter.html
@@ -189,10 +189,10 @@
 
           <div class="item-contact">
             <div class="flex-div">
-              <h2>Nous écrire</h2>
+              <h2>Nous situer</h2>
               <p>
-                Syndicat Départemental Force Ouvrière des Transports et de la
-                Logistique des Bouches-du-Rhône
+                Syndicat Départemental<br />Force Ouvrière des Transports<br />et
+                de la Logistique<br />des Bouches-du-Rhône
                 <br />
                 Vieille Bourse du Travail
                 <br />
