--- a/nous-connaitre.html
+++ b/nous-connaitre.html
@@ -322,7 +322,7 @@
         </div>
       </section>
 
-      <section id="notre-reseau">
+      <section id="notre-reseau" class="section">
         <div>
           <h2>Notre réseau</h2>
           <p>
